# pybugger-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.llm-test  Dockerfile.test  README.md  TASKS.md  debug_e2e_test.py  pyproject.toml
.github/: settings.yml
.github/workflows/: adapter-tests.yml  ci.yml  lint.yml  llm-tests.yml  release.yml  tests.yml
.opencode/: package.json
docs/: USER_STORY.md
docs/architecture/: multi-language-support.md
docs/design/: data-inspector-hld.md  tui-formatter-hld.md
docs/plan/: IMPLEMENTATION_PLAN.md  LLD_API.md  LLD_BACKEND.md  LLD_REVIEW.md  TEST_AUTOMATION.md  TEST_PLAN.md
docs/plans/: data-inspector-lld.md  data-inspector-tests.md  feature-backlog.md  tui-formatter-lld.md  tui-formatter-tests.md
docs/user-stories/: US-DATA-002-smart-data-preview.md  US-TUI-001-terminal-formatting.md
examples/: call_hierarchy_demo.py  data_science_debug.py
src/opencode_debugger/: __init__.py  config.py  main.py
src/opencode_debugger/adapters/: __init__.py  dap_client.py  debugpy_adapter.py
src/opencode_debugger/api/: breakpoints.py  deps.py  errors.py  execution.py  inspection.py  output.py  router.py  server.py  sessions.py
src/opencode_debugger/core/: __init__.py  events.py  exceptions.py  session.py
src/opencode_debugger/models/: dap.py  events.py  requests.py  responses.py  session.py
src/opencode_debugger/persistence/: __init__.py  breakpoints.py  storage.py
src/opencode_debugger/utils/: output_buffer.py
src/polybugger_mcp/: __init__.py  config.py  main.py  mcp_server.py
src/polybugger_mcp/adapters/: __init__.py  base.py  codelldb_adapter.py  dap_client.py  debugpy_adapter.py  delve_adapter.py  factory.py  node_adapter.py
src/polybugger_mcp/api/: __init__.py  breakpoints.py  deps.py  errors.py  execution.py  inspection.py  output.py  recovery.py  router.py  server.py  sessions.py  watches.py
src/polybugger_mcp/core/: events.py  exceptions.py  session.py
src/polybugger_mcp/models/: dap.py  events.py  inspection.py  session.py
src/polybugger_mcp/persistence/: breakpoints.py  sessions.py  storage.py
src/polybugger_mcp/utils/: __init__.py  data_inspector.py  output_buffer.py  source_reader.py
src/pybugger_mcp/: __init__.py  config.py  main.py  mcp_server.py
src/pybugger_mcp/adapters/: __init__.py  base.py  codelldb_adapter.py  dap_client.py  debugpy_adapter.py  delve_adapter.py  factory.py  node_adapter.py
src/pybugger_mcp/api/: breakpoints.py  deps.py  errors.py  execution.py  inspection.py  output.py  recovery.py  router.py  server.py  sessions.py  watches.py
src/pybugger_mcp/core/: events.py  session.py
src/pybugger_mcp/models/: __init__.py  dap.py  requests.py  responses.py  session.py
src/pybugger_mcp/persistence/: breakpoints.py  sessions.py  storage.py
src/pybugger_mcp/utils/: __init__.py  data_inspector.py  tui_formatter.py
src/python_debugger_mcp/core/: session.py
tests/: __init__.py  conftest.py
tests/e2e/: test_adapter_go.py  test_adapter_node.py  test_adapter_python.py  test_adapter_rust.py  test_adapters_base.py  test_debug_session.py  test_example_debugging.py  test_llm_debugging.py
tests/e2e/fixtures/go/: go.mod  simple.go
tests/e2e/fixtures/javascript/: simple.js
tests/e2e/fixtures/python/: simple.py
tests/e2e/fixtures/rust/: simple.rs
tests/integration/: test_api_recovery.py  test_api_sessions.py  test_api_watches.py
tests/unit/: test_data_inspector.py  test_events.py  test_mcp_server.py  test_mcp_tools.py  test_output_buffer.py  test_persistence.py  test_session_recovery.py  test_source_reader.py  test_tui_formatter.py  test_watches.py
