[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-debugger-mcp"
version = "0.1.0"
description = "MCP server for interactive Python debugging with AI agents via debugpy/DAP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Amir Wilf" }
]
keywords = ["mcp", "debugger", "debugging", "ai", "dap", "debugpy", "python", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "debugpy>=1.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-aiofiles>=23.2.0",
    "pre-commit>=4.0.0",
    "codespell>=2.3.0",
]

[project.scripts]
python-debugger-mcp = "python_debugger_mcp.main:main"
python-debugger-mcp-server = "python_debugger_mcp.mcp_server:main"

[project.urls]
Homepage = "https://github.com/wilfoa/python-debugger-mcp"
Documentation = "https://github.com/wilfoa/python-debugger-mcp#readme"
Repository = "https://github.com/wilfoa/python-debugger-mcp"
Issues = "https://github.com/wilfoa/python-debugger-mcp/issues"
Changelog = "https://github.com/wilfoa/python-debugger-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/python_debugger_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/python_debugger_mcp"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from in except - intentionally omitted for cleaner tracebacks
    "B905",   # zip without strict
    "SIM102", # nested if - sometimes clearer than combined conditions
    "SIM105", # contextlib.suppress - explicit try/except is often clearer
]

[tool.ruff.lint.isort]
known-first-party = ["python_debugger_mcp"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]  # Unused function arguments (fixtures)
"src/python_debugger_mcp/api/errors.py" = ["ARG001"]  # FastAPI error handlers require request arg
"src/python_debugger_mcp/mcp_server.py" = ["ARG001"]  # FastMCP lifespan requires app arg
"src/python_debugger_mcp/models/requests.py" = ["ARG003"]  # Pydantic validator signature

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "python_debugger_mcp.mcp_server"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false

# Semantic Release configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/python_debugger_mcp/__init__.py:__version__"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
template_dir = ".github/templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore.*",
    "^ci.*",
    "^docs.*",
    "^style.*",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
